<resources>
    <string name="app_name">Khana Khalo</string>
    <string name="home">Home</string>
    <string name="order">Order</string>
    <string name="cart">Cart</string>
    <string name="account">Account</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite kitchen!</string>
    <string name="slide_2_title">Schedule Delivery</string>
    <string name="slide_2_desc">Schedule your delivery and surprise your family and friends </string>
    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best Discount on Every Order!</string>
    <string name="slide_4_title">Fastest Delivery</string>
    <string name="slide_4_desc">Fastest Delivery compared to any other Food App</string>
    <string name="todo">ImageView</string>
    <string name="password">Password</string>
    <string name="i_forgot">I Forget</string>
    <string name="login">LOGIN</string>
    <string name="new_user">New User?</string>
    <string name="sign_up">Sign Up</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="register">REGISTER</string>
    <string name="full_name">Full Name</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="sign_in">Sign In</string>
    <string name="set_password">GET PASSWORD</string>
    <string name="name_of_shop">Name of Shop</string>
    <string name="type_of_shop">Type of Shop</string>
    <string name="distance_of_shop">Distance of Shop</string>
    <string name="delivary_charge">Delivary Charge</string>
    <string name="open">OPEN</string>
    <string name="close">CLOSE</string>
    <string name="address">Address</string>
    <string name="profile">Profile</string>
    <string name="name_of_foods">Name of foods</string>
    <string name="price_of_foods">Price of foods</string>
    <string name="_1_item_added">1 item added</string>
    <string name="total_rs_100">Total Rs 100/-</string>
    <string name="checkout">Goto Cart</string>
    <string name="into">×</string>
    <string name="total_amount_to_be_paid">Total amount to be paid</string>
    <string name="_100">₹ 100</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="full_address">Full Address</string>
    <string name="land_mark">Land Mark</string>
    <string name="place_order">Place Order</string>
    <string name="remove_all">Remove All</string>
    <string name="pending">Pending</string>
    <string name="choose_payment_mode">Choose Payment Mode</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="paytm_upi_card">Paytm / Upi / Card</string>
    <string name="special_thali">Special Thali</string>
    <string name="kitchen_special_thali">Kitchen Special Thali</string>
    <string name="recommended">Recommended</string>
</resources>