<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="4dp"
    app:cardCornerRadius="10dp"
    android:layout_margin="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:background="#FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/cat_image"
            android:src="@drawable/thumb"
            android:scaleType="fitXY"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:contentDescription="@string/todo" />
        <RelativeLayout
            android:padding="5dp"
            android:background="#FFFFFF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="16sp"
                android:textStyle="bold"
                android:id="@+id/cat_name"
                android:text="@string/name_of_shop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"/>
            <TextView
                android:padding="5dp"
                android:textSize="12sp"
                android:textStyle="bold"
                android:id="@+id/cat_open"
                android:text="@string/open"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_green_dark"
                android:textColor="@android:color/white"/>
            <TextView
                android:padding="5dp"
                android:textSize="12sp"
                android:textStyle="bold"
                android:id="@+id/cat_close"
                android:text="@string/close"
                android:visibility="gone"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_red_dark"
                android:textColor="@android:color/white"/>
            <TextView
                android:textSize="12sp"
                android:textStyle="bold"
                android:id="@+id/cat_type"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:layout_below="@id/cat_name"
                android:text="@string/type_of_shop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"/>
            <TextView
                android:padding="5dp"
                android:textSize="12sp"
                android:textStyle="bold"
                android:id="@+id/cat_distance"
                android:drawablePadding="4dp"
                android:background="@drawable/gray_round"
                android:layout_below="@id/cat_type"
                android:text="@string/distance_of_shop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                app:drawableStartCompat="@drawable/ic_time" />
            <TextView
                android:padding="5dp"
                android:textSize="12sp"
                android:textStyle="bold"
                android:id="@+id/cat_charge"
                android:drawablePadding="4dp"
                android:background="@drawable/gray_round"
                android:layout_below="@id/cat_type"
                android:layout_toEndOf="@id/cat_distance"
                android:text="@string/delivary_charge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textColor="@android:color/black"
                app:drawableStartCompat="@drawable/ic_bike" />
        </RelativeLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>