<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="4dp"
    android:layout_margin="10dp"
    app:cardCornerRadius="10dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/food_image"
            android:src="@drawable/thumb"
            android:scaleType="fitXY"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/todo"/>
        <LinearLayout
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:layout_toEndOf="@id/food_image"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/food_name"
                android:text="@string/name_of_foods"
                android:textColor="@android:color/black"/>
            <LinearLayout
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/food_quantity"
                    android:text="@string/price_of_foods"
                    android:textColor="@android:color/black"/>
                <TextView
                    android:textSize="18sp"
                    android:text="@string/into"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/food_price"
                    android:text="@string/price_of_foods"
                    android:textColor="@android:color/black"/>
            </LinearLayout>
            <TextView
                android:id="@+id/total"
                android:textSize="14sp"
                android:text="@string/total_amount_to_be_paid"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:padding="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_red_light"
                android:background="#D5D0D0"/>
        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>