<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FoodlistActivity">
    <androidx.appcompat.widget.Toolbar
        android:elevation="5dp"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
    <TextView
        android:text="@string/special_thali"
        android:textSize="20sp"
        android:textColor="#D50000"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <androidx.cardview.widget.CardView
        app:cardElevation="4dp"
        android:layout_margin="5dp"
        app:cardCornerRadius="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/food_img"
                android:src="@drawable/thali"
                android:scaleType="fitXY"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/todo"/>
            <LinearLayout
                android:padding="5dp"
                android:layout_toStartOf="@id/box"
                android:layout_toEndOf="@id/food_img"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/food_name"
                    android:text="@string/special_thali"
                    android:textColor="@android:color/black"/>
                <TextView
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kitchen_special_thali"
                    android:textColor="@android:color/black"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/foodprice"
                    android:text="@string/price_of_foods"
                    android:textColor="@android:color/black"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/box"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true">
                <Button
                    android:id="@+id/minu"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/ic_minus"/>
                <EditText
                    android:enabled="false"
                    android:id="@+id/cartcoun"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:autofillHints="count"
                    android:inputType="number" />
                <Button
                    android:id="@+id/ad"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/ic_add"/>
            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <TextView
        android:text="@string/recommended"
        android:textSize="20sp"
        android:textColor="#D50000"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_food"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"/>
    <LinearLayout
        android:id="@+id/cart"
        android:padding="6dp"
        android:visibility="gone"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark">
        <TextView
            android:id="@+id/item"
            android:textStyle="bold"
            android:textSize="14sp"
            android:text="@string/_1_item_added"
            android:textColor="#FFFFFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <View
            android:layout_width="5dp"
            android:layout_height="30dp"
            android:background="#FFFFFF"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"/>
        <TextView
            android:id="@+id/amount"
            android:textStyle="bold"
            android:textSize="14sp"
            android:text="@string/total_rs_100"
            android:textColor="#FFFFFF"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/checkout"
            android:text="@string/checkout"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@drawable/rounded_corner"/>
    </LinearLayout>
</LinearLayout>