<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="4dp"
    android:layout_margin="5dp"
    app:cardCornerRadius="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/food_image"
            android:src="@drawable/thumb"
            android:scaleType="fitXY"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/todo"/>
        <LinearLayout
            android:paddingStart="5dp"
            android:layout_toStartOf="@id/box"
            android:layout_toEndOf="@id/food_image"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/food_name"
                android:text="@string/name_of_foods"
                android:textColor="@android:color/black"/>
            <TextView
                android:textSize="18sp"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/food_quantity"
                android:text="@string/price_of_foods"
                android:textColor="@android:color/black"/>
            <TextView
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/food_price"
                android:text="@string/price_of_foods"
                android:textColor="@android:color/black"/>
        </LinearLayout>
        <TextView
            android:paddingTop="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp"
            android:textSize="12sp"
            android:textStyle="bold"
            android:id="@+id/status"
            android:text="@string/pending"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_dark"
            android:textColor="@android:color/white"/>
    </RelativeLayout>
</androidx.cardview.widget.CardView>