<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dot_dark_screen4">
    <ImageView
        android:id="@+id/logo"
        android:layout_margin="20dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/scooter"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/todo" />
    <LinearLayout
        android:id="@+id/body"
        android:layout_below="@id/logo"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <View
            android:layout_width="7dp"
            android:layout_height="40dp"
            android:layout_marginStart="-2dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_corner" />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:padding="16dp"
            android:layout_height="wrap_content"
            android:background="@drawable/white_rounded"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="21.5dp"
                android:gravity="center_horizontal"
                android:text="@string/register"
                android:textColor="#333232"
                android:textSize="23.3sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="27.3dp"
                android:text="@string/full_name"
                android:textColor="#9e9d9d"
                android:textSize="12.3sp" />
            <EditText
                android:id="@+id/regName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@android:color/transparent"
                android:maxLines="1"
                android:textColorHint="#c2c2c2"
                android:textSize="15sp"
                android:autofillHints="fullname"
                android:inputType="text" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="6.7dp"
                android:layout_marginEnd="17.3dp"
                android:background="#9e9e9e" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="27.3dp"
                android:text="@string/mobile_number"
                android:textColor="#9e9d9d"
                android:textSize="12.3sp" />
            <EditText
                android:id="@+id/regPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@android:color/transparent"
                android:maxLines="1"
                android:textColorHint="#c2c2c2"
                android:textSize="15sp"
                android:autofillHints="phone"
                android:inputType="phone" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="6.7dp"
                android:layout_marginEnd="17.3dp"
                android:background="#9e9e9e" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/password"
                android:textColor="#9e9d9d"
                android:textSize="12.3sp" />
            <EditText
                android:id="@+id/regPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:inputType="textPassword"
                android:maxLength="10"
                android:maxLines="1"
                android:textColor="#333232"
                android:autofillHints="password" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="6.7dp"
                android:layout_marginEnd="17.3dp"
                android:layout_marginBottom="27dp"
                android:background="#9e9e9e" />
        </LinearLayout>
    </LinearLayout>
    <Button
        android:layout_below="@id/body"
        android:id="@+id/btnSignUp"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="-25dp"
        android:layout_marginEnd="50dp"
        android:layout_alignParentEnd="true"
        android:background="@drawable/circle_arrow"/>
    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/already_have_an_account"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/gosignin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:gravity="center_horizontal"
            android:text="@string/sign_in"
            android:textColor="#38b5f2"
            android:textSize="16sp"
            android:textStyle="bold"/>
    </LinearLayout>
</RelativeLayout>