<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.cardview.widget.CardView
        android:elevation="5dp"
        app:cardCornerRadius="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <View
                android:layout_width="7dp"
                android:layout_height="40dp"
                android:layout_marginStart="-2dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/rounded_corner" />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:padding="25dp"
                android:layout_height="wrap_content"
                android:background="@drawable/white_rounded"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="21.5dp"
                    android:gravity="center_horizontal"
                    android:text="@string/choose_payment_mode"
                    android:textColor="#333232"
                    android:textSize="23.3sp" />
                <Button
                    android:id="@+id/cod"
                    android:text="@string/cash_on_delivery"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/rounded_corner"
                    android:textSize="15sp"/>
                <Button
                    android:id="@+id/paytm"
                    android:text="@string/paytm_upi_card"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/rounded_corner"
                    android:textSize="15sp"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>