<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashActivity">
    <LinearLayout
        android:id="@+id/splash"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_marginTop="100dp"
            android:src="@mipmap/logo_squre"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:contentDescription="@string/todo" />
        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <TextView
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:text="@string/app_name"
            android:layout_marginBottom="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/onboard"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <LinearLayout
            android:id="@+id/layoutDots"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="horizontal" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha=".5"
            android:layout_above="@id/layoutDots"
            android:background="@android:color/white" />
        <Button
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@null"
            android:text="@string/skip"
            android:textColor="@android:color/white"
            android:layout_alignParentEnd="true" />
        <Button
            android:id="@+id/btn_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@null"
            android:text="@string/skip"
            android:textColor="@android:color/white"
            android:layout_alignParentStart="true" />
    </RelativeLayout>
</LinearLayout>