<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="4dp"
    android:layout_margin="5dp"
    app:cardCornerRadius="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/food_image"
            android:src="@drawable/thumb"
            android:scaleType="fitXY"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/todo"/>
        <LinearLayout
            android:padding="5dp"
            android:layout_toStartOf="@id/box"
            android:layout_toEndOf="@id/food_image"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/food_name"
                android:text="@string/name_of_foods"
                android:textColor="@android:color/black"/>
            <TextView
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/food_quantity"
                android:text="@string/price_of_foods"
                android:textColor="@android:color/black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/food_price"
                android:text="@string/price_of_foods"
                android:textColor="@android:color/black"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/box"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true">
            <Button
                android:id="@+id/minus"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/ic_minus"/>
            <EditText
                android:enabled="false"
                android:id="@+id/cartcount"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:autofillHints="count"
                android:inputType="number" />
            <Button
                android:id="@+id/add"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/ic_add"/>
        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>